--- a/app/views/jobsites/_jobsites.html.erb
+++ b/app/views/jobsites/_jobsites.html.erb
@@ -1,3 +1,1 @@
-
-Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(@jobsites.map{|job| [job.name,job.id]}) %>
-
+Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsiteId(this)" %>
