--- a/app/views/documents/_documents.html.erb
+++ b/app/views/documents/_documents.html.erb
@@ -8,12 +8,11 @@
     </tr>
 
 <% documents.each do |document| %>
-     <tr>
+     <tr id="document_<%= document.id %>">
       <td><%= document.document_file_name %></td>
       <td><%= document.document_content_type %></td>
       <td><%= document.created_at%></td>
-      <td><%= link_to 'Delete', document, :confirm => 'Are you sure?',
-            :method => :delete %></td>
+      <td><%= link_to 'Destroy', document, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
     </tr>
   
 <% end %>
