--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,24 +1,26 @@
 <%= form_for(@document, :url => documents_path(:type => params[:type]),:remote => true, :html => {:multipart => true }) do |f| %>
+
   <table width="100%">
     <tr>
       <td>
-         <%= f.hidden_field :documentable_type, :value => params[:type] %>
+        <div id="error_explanation" style="display: none;">
+        </div>
       </td>
-
-     </tr>
-
-     
-     <tr>
+    </tr>
+    <tr>
+      <td>
+        <%= f.hidden_field :documentable_type, :value => params[:type] %>
+        <%= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
+      </td>
+    </tr>
+    <tr>
       <td id="file_field">
-       <%= f.file_field :document %>
+        <%= f.file_field :document %>
       </td>
     </tr>
     <tr>
       <td><%= f.submit "Add document", :class => "btn-success" %></td>
     </tr>
-
-    
-
   </table>
 <% end %>
 <style>
@@ -28,6 +30,5 @@
 </style>
 
 <hr />
-
 
 
