--- a/app/views/layouts/_customer_with_action.html.erb
+++ b/app/views/layouts/_customer_with_action.html.erb
@@ -3,7 +3,7 @@ Customer :
 <%= f.select :customers, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => session[:customer_id]), {}, :onchange => "getJobsite(this);" %>
 <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", "/customers/new"],
     ["Add Job Site", "/jobsites/new"] ,["Add Job", "/jobs/new"] , ["Add Note", "#"], ["Add Contact", "/contacts/new"],
-    ["Add Document", "#"]]), :placeholder => "Actions"
+    ["Add Document", documents_path(:type => "Customer")]]), :placeholder => "Actions"
 %>
 
 <br />
