--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -21,11 +21,16 @@
   <div style="width:435px; font-weight: bold;">
     <%= f.hidden_field :customer_id, :value => @customer_id %>
     <%= f.hidden_field :jobsite_id, :value => @jobsite_id %>
-    
+
     <% if @customer == nil %>
-      <%= "No customer details found!" %>
+      <span style="color:red">Please select customer for this job</span>
     <% else %>
       <%=  "Customer : " + @customer.company_name + ", " + @customer.address1 + ", " + @customer.city + ", " + @customer.state + ", " + @customer.zip.to_s %>
+    <% end %>
+
+    <% if @jobsite == nil %>
+      <span style="color:red">Please select Jobsite and continue</span>
+    <% else %>
       <%= "Job Site : " + @jobsite.name + ", " + @jobsite.city + ", " + @jobsite.state + ", " + @jobsite.zip %>
     <% end %>
   </div>
@@ -85,19 +90,9 @@
 <div style="width:420px;">
   <h4 style="background:#CCC; padding:5px; border:1px solid #999; width:auto;">Job Notes</h4>
   <%= render 'notes/form', :style => "table{ border:none; }" %>
-  <table class="table">
-    <table class="table table-striped">
-      <% @notes.each do |notes| %>
-        <tr class="<%= cycle('even', 'odd') %> ">
-          <td><%= notes.note_type  %></td>
-          <td><%= notes.description %></td>
-          <td><%= notes.created_at %></td>
-          <td>
-            <%= link_to "Edit"  %> |
-            <%= link_to "Delete" %>
-          </td>
-        </tr>
-      <% end %>
-    </table>
-  </table>
+  <hr />
+  <h2>NOTES</h2>
+  <div id="notes">
+    <%= render :partial => "notes/notes", :locals => {:notes => @notes} %>
+  </div>
 </div>
