--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -2,14 +2,14 @@
   <table width="100%">
     <tr>
       <td>
-        <% if params[:type] == "Customer" %>
-          <%= f.select :notable_id, options_for_select(current_company.customers.map{|customer| [customer.company_name, customer.id]})%>
+        <%= f.hidden_field :notable_id, :value => session[:customer_id] %>
+        <% if params[:type] == "Customer" %>          
           <%= f.hidden_field :notable_type, :value => params[:type] %>
         <% end %>
         <% if params[:controller] == "jobs" %>
-          <%= f.select :notable_id, options_for_select(current_company.jobs.map{|job| [job.reference_no, job.id]}) %>
           <%= f.hidden_field :notable_type, :value => "Job" %>
         <% end %>
+        <%= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
       </td>
     </tr>
     <tr>
