--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               </ul>
               <ul class="nav pull-right">
                 <li>
-                 <%= link_to_function "Settings","alert('coming soon!'); return false;" %>
+                 <%= link_to "Settings", settings_path %>
                 </li>
                 <li>
                     <%= link_to "Logout", destroy_company_session_path, :method => "DELETE" %>
