--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,10 +1,7 @@
 <%= render '/layouts/customer_with_action' %>
 <%= render '/layouts/tab_panel_for_customer' %>
-<%= render 'form' %>
+<%= render 'form' %><br/>
 <%= render 'search' %>
-<hr />
-
-<h2>DOCUMENTS</h2>
 <div id="documents">
   <%= render :partial => "documents", :locals => {:documents => @documents} %>
 </div>
