--- a/app/views/documents/_search.html.erb
+++ b/app/views/documents/_search.html.erb
@@ -4,7 +4,8 @@
 
 
 <div>
- <%= form_tag :documents, :method => 'get', :class => "form-search" do |f|  %>
- <%= text_field_tag :search, params[:search], :placeholder => "search", :class => "input-large search-query" %> &nbsp;
- <% end %>
+  <%= form_tag :documents, :method => 'get', :class => "form-search" do |f|  %>
+    <%= text_field_tag :search, params[:search], :placeholder => "search", :class => "input-large search-query" %> &nbsp;
+    <%= button_tag :button, :style => "height:40px; width: 80px;"%>
+  <% end %>
 </div>
