--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,11 +3,11 @@
 
 <div>
   <%= form_tag :jobs, :method => 'get', :class => "form-search" do |f|  %>
-    <div style="visibility: hidden;">
-      <%= submit_tag "Search", :name => nil, :class => "btn btn-info", :visible => false %>
-    </div>
+
     <%= text_field_tag :search, params[:search], :placeholder => "search by reference number", :class => "input-large search-query" %> &nbsp;
-    &nbsp; &nbsp;
+    
+    <%= button_tag :button, :style => "height:40px; width: 80px;"%>
+    &nbsp;&nbsp;
     <%= select_tag :my_job, options_for_select([['My Jobs', 'my_jobs']]) %>
   <% end %>
 </div>
