--- a/app/views/layouts/_customer_with_action.html.erb
+++ b/app/views/layouts/_customer_with_action.html.erb
@@ -1,17 +1,17 @@
 <%= form_for "form2" do |f|%>
-  <% if params[:controller]=="customers" && params[:action]=="new" %>
+  <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index") %>
 
   <% else %>
     Customer :
     <%= f.select :customers, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => session[:customer_id]), {}, :onchange => "getJobsite(this);" %>
   <% end %>
-  <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", "/customers/new"],
-      ["Add Job Site", "/jobsites/new"] ,["Add Job", "/jobs/new"] , ["Add Note", "#"], ["Add Contact", "/contacts/new"],
-      ["Add Document", "#"]]), :placeholder => "Actions"
+  <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", new_customer_path],
+      ["Add Job Site", new_jobsite_path] ,["Add Job", new_job_path] , ["Add Note", notes_path(:type => "Customer")], ["Add Contact", new_contact_path],
+      ["Add Document", documents_path(:type => "Customer")]])
 %>
 
   <br />
-  <% if params[:controller]=="customers" && params[:action]=="new" %>
+  <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index") %>
   <% else %>
     <div id="jobsite">
       <% @jobsites = Jobsite.find_all_by_customer_id(session[:customer_id]) %>
