--- a/app/views/layouts/_tab_panel_for_customer.erb
+++ b/app/views/layouts/_tab_panel_for_customer.erb
@@ -16,7 +16,7 @@
     </li>
 
     <li class = <%= params[:controller] == "documents" && params[:action] == "index" ? 'active' : ''  %>>
-      <%= link_to "Documents", documents_path(:type => Customer)%>
+      <%= link_to "Documents", documents_path(:type => "Customer")%>
     </li>
 
     <li>
