--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,28 +1,1 @@
-<ul class="nav nav-tabs" id="myTab">
-    <li class>
-    <%= link_to 'Accounting',"#" %>
-    </li>
-
-     <li class>
-    <%= link_to 'Users',"#" %>
-    </li>
-
-    <li>
-      <%= link_to "Roles","#" %>
-    </li>
-
-    <li>
-      <%= link_to "Custom Fields","#"%>
-    </li>
-
-
-    <li>
-      <%= link_to "Billing", "#" %>
-    </li>
-
-    </ul>
-
-    <div class="tab-content">
-    <div class="tab-pane active" id="customer"></div>
-    <div class="tab-pane" id="job"></div>
-
+<%= render :partial => "layouts/tabs_for_settings" %>
