--- a/app/views/notes/create.js.erb
+++ b/app/views/notes/create.js.erb
@@ -1,6 +1,3 @@
-<% if !@note.new_record? %>
-  $('#notes').replaceWith("<%= escape_javascript(render(:partial => 'notes', :locals => {:notes => @notes})) %> ");
+  $('#notes').html("<%= escape_javascript(render(:partial => 'notes', :locals => {:notes => @notes})) %> ");
   $('#note_description').val(' ')
   $('#note_note_type').val(' ')
-<% else %>
-<% end %>
