--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -28,8 +28,8 @@
         <td><%= "No. of job sites" %> </td>
         <td><%= "Job executed" %> </td>
         <td>
-          [<%= link_to "Add Contact" %>]
-          [<%= link_to "Add Job Site" %>]
+          [<%= link_to "Add Contact", new_contact_path %>]
+          [<%= link_to "Add Job Site", new_jobsite_path %>]
         </td>
       </tr>
     <% end %>
