--- a/app/views/layouts/_customer_with_action.html.erb
+++ b/app/views/layouts/_customer_with_action.html.erb
@@ -4,12 +4,15 @@
   <% else %>
     Customer :
     <%= f.select :customers, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => session[:customer_id]), {}, :onchange => "getJobsite(this);" %>
+    
+    <%= link_to "search", customers_path, :class => "button medium green"%>
   <% end %>
 
   <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", new_customer_path],
       ["Add Job Site", new_jobsite_path] ,["Add Job", new_job_path] , ["Add Note", notes_path(:type => "Customer")], ["Add Contact", new_contact_path],
       ["Add Document", documents_path(:type => "Customer")]])
-%>
+  %>
+
 
   <br />
   <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index") %>
@@ -18,6 +21,14 @@
       <% @jobsites = Jobsite.find_all_by_customer_id(session[:customer_id]) %>
       Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsiteId(this)" %>
     </div>
+  <% end %>
+
+  
+  <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index") %>
+  <% else %>
+  <div>
+  Parent/Billing &nbsp; :<%= select_tag :jobsite_id, options_for_select(["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsiteId(this)" %>
+  </div>
   <% end %>
 <%  end %>
 <hr />
