--- a/app/views/documents/_documents.html.erb
+++ b/app/views/documents/_documents.html.erb
@@ -1,5 +1,5 @@
 
-<table width="100%"> 
+<table class="table table-striped" :width="100%">
     <tr>
       <th>Description</th>
       <th>FileType</th>
