--- a/app/views/layouts/_tab_panel_for_customer.erb
+++ b/app/views/layouts/_tab_panel_for_customer.erb
@@ -7,7 +7,7 @@
     <%= link_to 'Jobs', jobs_path %>
     </li>
 
-    <li>
+    <li class = <%= params[:controller]=="notes" ? 'active' : ''  %> >
       <%= link_to "Notes", notes_path(:type => "Customer") %>
     </li>
 
@@ -15,7 +15,7 @@
       <%= link_to "Contact", contacts_path%>
     </li>
 
-    <li class = <%= params[:controller] == "documents" && params[:action] == "index" ? 'active' : ''  %>>
+    <li class = <%= params[:controller] == "documents" ? 'active' : ''  %>>
       <%= link_to "Documents", documents_path(:type => "Customer")%>
     </li>
 
