--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -2,7 +2,16 @@
   <li class = <%= params[:controller] == "jobs" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
     <%= link_to "Job" %>
   </li>
-  <li class = <%= params[:controller] == "documents" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
+  <li class = <%= params[:controller] == "notes" ? 'active' : '' %> >
+    <%= link_to "Notes", notes_path(:type => "Job") %>
+  </li>
+  <li>
+    <%= link_to "Times", "#" %>
+  </li>
+  <li>
+    <%= link_to "Items", "#" %>
+  </li>
+  <li class = <%= params[:controller] == "documents" ? 'active' : '' %> >
     <%= link_to "Documents", documents_path(:type => "Job") %>
   </li>
   <li class = <%= params[:controller] == "customs" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
