--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,8 +1,13 @@
 <%= render '/layouts/customer_with_action' %>
-<%= render '/layouts/tab_panel_for_customer' %>
+
+<% if params[:type] == "Job" || params[:type] == "job" %>
+  <%= render '/layouts/tab_panel_for_job' %>
+<% else %>
+  <%= render  '/layouts/tab_panel_for_customer' %>
+<% end %>
+
 <%= render 'form' %>
-<hr />
-  <h2>NOTES</h2>
-  <div id="notes">
-    <%= render :partial => "notes", :locals => {:notes => @notes} %>
-  </div>
+
+<div id="notes">
+  <%= render :partial => "notes", :locals => {:notes => @notes} %>
+</div>
