removed notes from job page

--- a/app/views/notes/_notes.html.erb
+++ b/app/views/notes/_notes.html.erb
@@ -8,7 +8,7 @@
       <!-- image section -->
       <div id="image">
         <div id="img">
-
+          <%= image_tag "user.png", :width => "80px", :height => "80px" %>
         </div>
         <div id="desc">
           Bob fieldGuy
