--- a/app/views/jobs/_job_heading.html.erb
+++ b/app/views/jobs/_job_heading.html.erb
@@ -1,4 +1,4 @@
-<span style = "color:#0044cc; font-weight: bold;"> Job # : <%= @job_number  %>  </span>
+<span style = "color:#0044cc; font-weight: bold;"> Job # : <%= Job.count + 1  %>  </span>
 <br />
 <div style="width:435px; font-weight: bold;">
     <% if @customer == nil %>
