added job_with_action on layouts, helper file in application_controller, and created session[:job_id] for jobs items and jobs times

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,6 @@
-<%= render 'items_heading' %>
+<%= render '/layouts/job_with_action' %>
+<%= render '/layouts/tab_panel_for_job' %>
+
 <table class ="table table-striped ">
   <tr>
     <th>Type</th>
