--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'job_heading' %>
+<%= render '/layouts/job_with_action' %>
 <%= render '/layouts/tab_panel_for_job' %>
 <%= render 'form' %>
