--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -1,25 +1,22 @@
 <ul class = "nav nav-tabs" id="job_tabs">
   <li class = <%= params[:controller] == "jobs" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
-    <%= link_to "Job" %>
+    <%= link_to "Job", new_job_path  %>
   </li>
 
 
    <li class =" <%= params[:controller] == "notes" ? 'active' : ''  %> ">
-    <%= link_to "Notes",notes_path(:type => "Job") %>
+    <%= link_to "Notes", notes_path(:type => "Job") %>
   </li>
 
   <li>
     <%= link_to "Times", "#" %>
   </li>
 
-  <li>
-
+  <li class="<%= params[:controller] == "items" ? 'active' : ''  %> " >
     <%= link_to "Items", items_path %>
-
   </li>
 
-  <li class = <%= params[:controller] == "documents" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
-
+  <li class = <%= params[:controller] == "documents" ? 'active' : '' %> >
     <%= link_to "Documents", documents_path(:type => "Job") %>
   </li>
 
