--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,18 @@
 <%= render 'items_heading' %>
+<%= render '/layouts/tab_panel_for_job' %>
+
+
+
+<div>
+  <%= label_tag :Subtotal %>
+</div>
+
+<div>
+  <%= label_tag :add_item,"Add Item" %>
+  <%= text_field_tag :add_item %>
+  <%= link_to :add_item, new_item_path %>
+</div>
+
 <table class ="table table-striped ">
   <tr>
     <th>Type</th>
@@ -13,7 +27,7 @@
   <tr>
     <td><%= item.itemtype %></td>
     <td><%= item.qty %></td>
-    <td><%= item.number %></td>
+    <td><%= link_to item.number, edit_item_path(item) %></td>
     <td><%= item.name %></td>
     <td><%= item.description %></td>
   </tr>
