--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -9,11 +9,11 @@
   </li>
 
   <li>
-    <%= link_to "Times", "#" %>
+    <%= link_to_function "Times", "alert('comming soon!'); return false;" %>
   </li>
 
   <li class="<%= params[:controller] == "items" ? 'active' : ''  %> " >
-    <%= link_to "Items", items_path %>
+    <%= link_to_function "Items", "alert('comming soon!'); return false;"  %>
   </li>
 
   <li class = <%= params[:controller] == "documents" ? 'active' : '' %> >
