--- a/app/views/jobsites/_form.html.erb
+++ b/app/views/jobsites/_form.html.erb
@@ -12,7 +12,7 @@
       </ul>
     </div>
   <% end %>
-
+<%= f.label :parent_billing, "Parent/Billing" %>
 <%= f.select :customer_id, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id])), {}, :onchange => "getJobsite(this);" %>
 
 <div class ="field">
