--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               </ul>
               <ul class="nav pull-right">
                 <li>
-                  <%= link_to "Settings", settings_path %>
+                  <%= link_to "Settings", users_path %>
                 </li>
                 <li>
                   <%= link_to "Logout", destroy_company_session_path, :method => "DELETE" %>
