--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -26,7 +26,7 @@
           <%= contact ? contact.name : '-' %>
         </td>
         <td><%= contact ? contact.email : '-' %> </td>
-        <td style="text-align: center;"><%= Jobsite.where("customer_id=?", customer.id).count %> </td>
+        <td style="text-align: center;"><%= customer.id ? Jobsite.where("customer_id=?", customer.id).count : '0' %> </td>
         <td><%= "Job executed" %> </td>
         <td>
           [<%= link_to "Add Contact", new_contact_path(:cust_id => customer) %>]
