--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,4 +1,4 @@
-<%= render '/layouts/job_with_action' %>
+<%= render params[:type] == "Job" ?'/layouts/job_with_action' : "/layouts/customer_with_action" %>
 
 <% if params[:type] == "Job" || params[:type] == "job" %>
   <%= render '/layouts/tab_panel_for_job' %>
